cmake_minimum_required(VERSION 3.9)
project (DigiPak)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB SOURCES "src/*.cpp")
set(CMAKE_CXX_FLAGS "-std=gnu++1z")
add_executable(DigiPak ${SOURCES})
target_include_directories(DigiPak PRIVATE "include")
target_link_libraries(DigiPak stdc++fs)

enable_testing()
file(GLOB TEST_SOURCES "test/*.cpp")
add_executable(DigiPakTest ${TEST_SOURCES})
add_test(DigiPakTestTester DigiPakTest)
